--- a/workshop14/src/main/resources/application.properties
+++ b/workshop14/src/main/resources/application.properties
@@ -8,8 +8,8 @@
 # Local settings
 spring.redis.host=${REDISHOST}
 spring.redis.port=${REDISPORT}
-spring.redis.username=
-spring.redis.password=
+spring.redis.username=${REDISUSER}
+spring.redis.password=${REDISPASSWORD}
 spring.redis.client.type=jedis
 
 # # Redis DotCom
